Fix Previous Page button top highlight - wasn't aligning right on Blog page - http://hmr.andwcst.com/blog/page/2/

--- a/wp-content/themes/hmr-theme/assets/css/less/views/blog.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/blog.less
@@ -123,7 +123,7 @@
 		&.prev {
 			float:left;
 			margin-left:0;
-			padding:3px 0 0;
+			padding:5px 0 0;
 		}
 	}
 }
